# easytestwrite-py

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: android.yaml  ios.yaml
src/mobiauto/: platform.py
src/mobiauto/config/: loader.py  models.py
src/mobiauto/core/: controller.py  locators.py  optional.py  waits.py
src/mobiauto/device/: android_emulator.py  appium_server_manager.py  base.py  ios_simulator.py
src/mobiauto/drivers/: android.py  base.py  ios.py
src/mobiauto/network/: __init__.py  event_server.py  event_verifier.py  events.py  proxy.py
src/mobiauto/proxy/: mitmproxy.py
src/mobiauto/pytest_plugin/: __init__.py  fixtures.py  hooks.py  options.py
src/mobiauto/reporting/: manager.py  video.py
src/mobiauto/runner/: main.py
src/mobiauto/utils/: cli.py  logging.py  net.py  number_parser.py  platform.py
tests/: conftest.py
tests/e2e/: test_smoke.py  test_smoke_example.py
tests/unit/: test_appium_server_manager.py  test_config.py  test_core_controller.py  test_core_locators.py  test_core_optional.py  test_core_waits.py  test_device.py  test_drivers.py  test_event_server.py  test_network.py  test_platform.py  test_reporting.py  test_utils.py  test_utils_logging.py
